최종 프로젝트 파일 제출용 ( OpenWeatherMap api 키값 삭제 ) - Todo값 위치에 존재

--- a/vue-frontend/src/css/cmnty/boardList.css
+++ b/vue-frontend/src/css/cmnty/boardList.css
@@ -28,7 +28,7 @@
     text-align: center;
     position: relative;
     height: auto;
-    font-size: 10px; /* Todo: tfoot의 문제 - 해결 필요 */
+    font-size: 10px;
 }
 
 .foot-search-box {
